--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
 LoopVectorization = "0.12.49"
+VectorizationBase = "0.21"
 julia = "1"
 
 [extras]
