--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ VectorizationBase = "3d5dd08c-fd9d-11e8-17fa-ed2836048c2f"
 WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
+HalfIntegers = "1"
 LoopVectorization = "0.12.49"
 julia = "1"
 
